refactor: refactor codes